--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -39,6 +40,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "styled-components": "^3.1.6",
     "webpack": "^3.9.1",
