--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "prod": "cross-env NODE_ENV=production webpack -p "
   },
   "dependencies": {
-    "lodash": "^4.17.4",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
