webpack 4 and stuff

--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "React-Starter",
+  "name": "doc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "watch": "webpack --watch",
-    "dev": "webpack-dev-server",
-    "prod": "cross-env NODE_ENV=production webpack -p "
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development"
   },
+  "author": "Alex Lasagna",
+  "license": "ISC",
   "dependencies": {
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "styled-components": "^3.4.5"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-styled-components": "^1.5.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-root-import": "^4.1.8",
-    "clean-webpack-plugin": "^0.1.17",
-    "compression-webpack-plugin": "^1.0.1",
-    "cross-env": "^5.1.1",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^1.1.5",
-    "style-loader": "^0.19.0",
-    "css-loader": "^0.28.7",
-    "html-webpack-plugin": "^2.30.1",
-    "styled-components": "^3.1.6",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5",
-    "webpack-merge": "^4.1.1"
-  }
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.3",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-styled-components": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
+    "webpack-merge": "^4.1.4"
+  },
+  "browserslist": [
+    "last 15 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
