config and dependencies update

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-/node_modules
+# build output
+dist
+
+# dependencies
 node_modules
-/dist/
-psd
 package-lock.json
+yarn.lock
+!/yarn.lock
+test/node_modules
+
+# logs & pids
+*.log
+pids
+
+# coverage
+.nyc_output
+coverage
+
+# test output
+test/**/out*
+.DS_Store
